--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>vue-cli-3-demo</title>
+    <title>vue-dashboard</title>
+    <link href="https://fonts.googleapis.com/css?family=Poppins:200,400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.10.1/css/all.css">
+    <style>
+      body{
+        margin:0;
+      }
+    </style>
   </head>
   <body>
-    <noscript>
-      <strong>We're sorry but vue-cli-3-demo doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <!-- 
+    <script src="/dist/build.js"></script>-->
   </body>
 </html>
